--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,8 +27,8 @@ dist.dir=dist
 dist.jar=${dist.dir}/Universidad_Equipo85.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jcalendar-1.4.jar=..\\..\\GitHub\\Universidad_Guia85\\jcalendar-1.4.jar
-file.reference.mariadb-java-client-3.2.0.jar=..\\..\\GitHub\\Universidad_Guia85\\mariadb-java-client-3.2.0.jar
+file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
+file.reference.mariadb-java-client-3.2.0.jar=mariadb-java-client-3.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
