--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Universidad_Equipo85
+application.vendor=usuario
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Universidad_Equipo85.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.2.0.jar=mariadb-java-client-3.2.0.jar
@@ -58,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=universidad_equipo85.Universidad_Equipo85
+main.class=universidad_equipo85.Vistas.MenuPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
